samples/_failures_safe/1761369411_b7b079_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5d2ce58.c: In function ‘main’:
./samples/SAFE/__tmp_a5d2ce58.c:151:13: error: expected expression at end of input
  151 |             for (int i = 0; i <
      |             ^~~
./samples/SAFE/__tmp_a5d2ce58.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5d2ce58.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5d2ce58.c:151:13: error: expected declaration or statement at end of input
